# twitter-like-system

./: Cargo.toml  Dockerfile  Readme.md  database.wsd  db-migration.init.Dockerfile  diesel.toml  log.txt
db/sql/: V1.0.0__baseline.sql
doc/: openapi.yml
helm/message-service/: Chart.yaml  values.yaml
helm/message-service/templates/: deployment.yaml  service.yaml
src/: main.rs
src/db/: content.rs  content_entity.rs  db_connection.rs  error.rs  message.rs  message_entity.rs  mod.rs  schema.rs
src/routes/: content.rs  error.rs  message.rs  mod.rs  payload.rs
src/service/: content.rs  message.rs  mod.rs
