[package]
name = "msg-s-vangari"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "^1.0.79"
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "^0.8", features = ["v4", "serde"] }

[dependencies.rocket]
rocket = "0.5.0-rc.1"
features = ["json"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "r2d2", "chrono", "uuidv07", "serde_json"]

